// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard /> should call navigate the previous step when click on précédent 1`] = `
<div>
  <div
    class="sc-jSUZER heYtoX"
  >
    <form
      class="sc-liQGml FLXPs"
    >
      <div
        class="sc-ehkVkK geSARs"
      >
        <div
          class="sc-itMJkM ilhUDk"
        >
          <h1
            class="sc-hGglLj gNTphz"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-jSUZER sc-ciEjBl cbQucy ligDNQ"
      >
        <span
          aria-level="2"
          class="sc-ifSILs hXEwOi"
          role="heading"
        >
          Étape
          <span
            class="sc-IQBGL epuGom"
          >
            s
          </span>
          <span
            class="sc-gGfaQS jAVGni"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-jfvxQR gwhdUi"
        >
          <li
            aria-live="polite"
            class="sc-iuuDEZ fDrsBM"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-dcntqk ihSTnR"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-iuuDEZ COnby"
          >
            <span
              class="sc-dcntqk ktqqUW"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-bGhRYA blMIpW"
      >
        <button
          class="sc-hhOBVt fRaRnn sc-gYpcnp sc-fyBusP hBfKEF ekSPjX"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-gukea ccnSjS"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialState.stepIndex 1`] = `
<div>
  <div
    class="sc-jSUZER heYtoX"
  >
    <form
      class="sc-liQGml FLXPs"
    >
      <div
        class="sc-ehkVkK geSARs"
      >
        <div
          class="sc-itMJkM ilhUDk"
        >
          <h1
            class="sc-hGglLj gNTphz"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-jSUZER sc-ciEjBl cbQucy ligDNQ"
      >
        <span
          aria-level="2"
          class="sc-ifSILs hXEwOi"
          role="heading"
        >
          Étape
          <span
            class="sc-IQBGL epuGom"
          >
            s
          </span>
          <span
            class="sc-gGfaQS jAVGni"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-jfvxQR gwhdUi"
        >
          <li
            class="sc-iuuDEZ COnby"
          >
            <span
              class="sc-dcntqk ktqqUW"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-iuuDEZ fDrsBM"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-dcntqk ihSTnR"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-bGhRYA blMIpW"
      >
        <button
          class="sc-hhOBVt foDcLd sc-gYpcnp hBfKEF"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-hhOBVt irUZZv sc-gYpcnp hBfKEF"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should handle initialValues 1`] = `
<div>
  <div
    class="sc-jSUZER heYtoX"
  >
    <form
      class="sc-liQGml FLXPs"
    >
      <div
        class="sc-ehkVkK geSARs"
      >
        <div
          class="sc-itMJkM ilhUDk"
        >
          <h1
            class="sc-hGglLj gNTphz"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-jSUZER sc-ciEjBl cbQucy ligDNQ"
      >
        <span
          aria-level="2"
          class="sc-ifSILs hXEwOi"
          role="heading"
        >
          Étape
          <span
            class="sc-IQBGL epuGom"
          >
            s
          </span>
          <span
            class="sc-gGfaQS jAVGni"
          >
             
            1/3
          </span>
        </span>
        <ol
          class="sc-jfvxQR gwhdUi"
        >
          <li
            aria-live="polite"
            class="sc-iuuDEZ fDrsBM"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-dcntqk ihSTnR"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-iuuDEZ COnby"
          >
            <span
              class="sc-dcntqk ktqqUW"
            >
              2
            </span>
            Second Step
          </li>
          <li
            class="sc-iuuDEZ COnby"
          >
            <span
              class="sc-dcntqk ktqqUW"
            >
              3
            </span>
            Optional Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-bGhRYA blMIpW"
      >
        <button
          class="sc-hhOBVt fRaRnn sc-gYpcnp sc-fyBusP hBfKEF ekSPjX"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-gukea ccnSjS"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should navigate to the second step when click on Commencer 1`] = `
<div>
  <div
    class="sc-jSUZER heYtoX"
  >
    <form
      class="sc-liQGml FLXPs"
    >
      <div
        class="sc-ehkVkK geSARs"
      >
        <div
          class="sc-itMJkM ilhUDk"
        >
          <h1
            class="sc-hGglLj gNTphz"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-jSUZER sc-ciEjBl cbQucy ligDNQ"
      >
        <span
          aria-level="2"
          class="sc-ifSILs hXEwOi"
          role="heading"
        >
          Étape
          <span
            class="sc-IQBGL epuGom"
          >
            s
          </span>
          <span
            class="sc-gGfaQS jAVGni"
          >
             
            2/2
          </span>
        </span>
        <ol
          class="sc-jfvxQR gwhdUi"
        >
          <li
            class="sc-iuuDEZ COnby"
          >
            <span
              class="sc-dcntqk ktqqUW"
            >
              1
            </span>
            First Step
          </li>
          <li
            aria-live="polite"
            class="sc-iuuDEZ fDrsBM"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-dcntqk ihSTnR"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Deuxieme Etape
      </p>
      <label
        for="cb"
      >
        etape facultative
        <input
          id="cb"
          name="fooStep"
          type="checkbox"
          value=""
        />
      </label>
      <div
        class="sc-bGhRYA blMIpW"
      >
        <button
          class="sc-hhOBVt foDcLd sc-gYpcnp hBfKEF"
          type="button"
        >
          Précédent
        </button>
        <button
          class="sc-hhOBVt irUZZv sc-gYpcnp hBfKEF"
          type="button"
        >
          Imprimer le résultat
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Wizard /> should render a step 1`] = `
<div>
  <div
    class="sc-jSUZER heYtoX"
  >
    <form
      class="sc-liQGml FLXPs"
    >
      <div
        class="sc-ehkVkK geSARs"
      >
        <div
          class="sc-itMJkM ilhUDk"
        >
          <h1
            class="sc-hGglLj gNTphz"
          >
            test H1
          </h1>
        </div>
      </div>
      <div
        class="sc-jSUZER sc-ciEjBl cbQucy ligDNQ"
      >
        <span
          aria-level="2"
          class="sc-ifSILs hXEwOi"
          role="heading"
        >
          Étape
          <span
            class="sc-IQBGL epuGom"
          >
            s
          </span>
          <span
            class="sc-gGfaQS jAVGni"
          >
             
            1/2
          </span>
        </span>
        <ol
          class="sc-jfvxQR gwhdUi"
        >
          <li
            aria-live="polite"
            class="sc-iuuDEZ fDrsBM"
            tabindex="-1"
            title="onglet actif"
          >
            <span
              class="sc-dcntqk ihSTnR"
            >
              1
            </span>
            First Step
          </li>
          <li
            class="sc-iuuDEZ COnby"
          >
            <span
              class="sc-dcntqk ktqqUW"
            >
              2
            </span>
            Second Step
          </li>
        </ol>
      </div>
      <p>
        Premiere Etape
      </p>
      <div
        class="sc-bGhRYA blMIpW"
      >
        <button
          class="sc-hhOBVt fRaRnn sc-gYpcnp sc-fyBusP hBfKEF ekSPjX"
        >
          Commencer
          <svg
            aria-hidden="true"
            class="sc-gukea ccnSjS"
            fill="none"
            viewBox="0 0 28 15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </form>
  </div>
</div>
`;
